    profiles, and that they want the addon manager to keep updated. We lost
    this functionality when upgrading from Firefox 3.6, due to the loss of
    /etc/firefox/profile
    - update debian/firefox.dirs.in
    - update debian/firefox.install.in
    - update debian/firefox.links.in
    - update debian/firefox.postinst.in

  [ Micah Gersten <micahg@ubuntu.com> ]
  * fix LP: #926347 - Fix apparmor denial on Lucid and Maverick
    - update debian/usr.bin.firefox.apparmor.10.04
    - update debian/usr.bin.firefox.apparmor.10.10

  [ Jamie Strandboge <jamie@ubuntu.com> ]
  * debian/usr.bin.firefox.apparmor.12.04:
    - include p11-kit abstraction (only needed on 12.04). LP: #918973
  * debian/usr.bin.firefox.apparmor.*:
    - allow access to statm and smaps for about:memory. LP: #911494
    - allow read access to files in /opt. LP: #728485

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 06 Mar 2012 18:30:40 +0000

firefox-trunk (12.0~a1~hg20120131r85707-0ubuntu1) precise; urgency=low

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * New upstream snapshot v12.0 A1 HG20120131r85707
    - Fix LP: #857153 - Needs to get accessibility settings from GSettings

  * Update globalmenu-extension to 2.5 prerelease r275
  * Keep the firefox-kde-support suggest on releases older than precise
    for now
    - update debian/rules
  * Ensure that we suggest kmozillahelper on lucid
    - update debian/rules
  * Ensure that we replace kubuntu-firefox-installer on lucid
    - update debian/rules
  * Disable the tests on powerpc, because it sucks too much to run them
    - update debian/rules
  * "Fix" LP: #897794 - some websites expect "X11" to be the first token of
    the platform component in the UA string
    - update debian/patches/ubuntu-ua-string-changes.patch
  * Call xvfb-run with "-a" in case there are other servers running on the
    builder
    - update debian/build/testsuite.mk
  * Don't build with --disable-gconf on precise and newer. There is no hard