@@ -30,7 +30,6 @@ Build-Depends: cdbs,
 	libiw-dev,
 	mesa-common-dev,
 	libnotify-dev (>= 0.4), @SYSLIBS_BD@
-	libgnomevfs2-dev (>= 1:2.0),
 	yasm-1 (>= 1.1) | yasm (>= 1.1),
 	xvfb,
 	libdbusmenu-gtk-dev,
